<resources>
    <string name="app_name">Masarif</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="savings">Savings</string>
    <string name="remaining">Remaining</string>
    <string name="saved">Saved</string>
    <string name="spent">Spent</string>
    <string name="my_budget">My Budget</string>
    <string name="add_income">Add Income</string>
    <string name="edit_income">Edit Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="add_saving">Add Saving</string>
    <string name="edit_saving">Edit Saving</string>
    <string name="edit">Edit</string>
    <string name="source">Source</string>
    <string name="category">Category</string>
    <string name="value_is_required">Value is required</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="show">Show</string>
    <string name="all">All</string>
    <string name="value">Value</string>
    <string name="confirm">Confirm</string>
    <string name="discard">Discard</string>

</resources>
