<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/homeToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="4dp">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:background="@null"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/wallet"
                android:tint="@color/colorAccent" />

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/days_one"
                android:text="@string/add_income"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/categoryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/days_one"
            android:hint="@string/category"
            android:inputType="text"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAnimating="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/valueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/days_one"
            android:hint="@string/value"
            android:inputType="numberDecimal"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAnimating="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/add_button_ripple_yes"
                android:fontFamily="@font/days_one"
                android:text="@string/confirm"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/discardButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/add_button_ripple_no"
                android:fontFamily="@font/days_one"
                android:text="@string/discard"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>