<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mix1"
    tools:context=".ui.main.home.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/homeToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="4dp">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:background="@null"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/wallet"
                android:tint="@color/colorAccent" />

            <TextView
                android:id="@+id/toolbarTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/days_one"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="10dp">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectangle_corner_light"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/dayView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/days_one"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/homeTextViews"
                    android:text="@string/my_budget" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@null" />

                <TextView
                    android:id="@+id/myBudgetView"
                    style="@style/homeTextViews"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/homeTextViews"
                    android:text="@string/spent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@null" />

                <TextView
                    android:id="@+id/spentView"
                    style="@style/homeTextViews"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/homeTextViews"
                    android:text="@string/saved" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@null" />

                <TextView
                    android:id="@+id/savedView"
                    style="@style/homeTextViews"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/homeTextViews"
                    android:text="@string/remaining" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@null" />

                <TextView
                    android:id="@+id/remainingView"
                    style="@style/homeTextViews"
                    android:text="0" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear1"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="46dp"
            android:layout_marginRight="12dp"
            android:elevation="10dp"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/addIncomeView"
                style="@style/homeTextViewsAdd"
                android:text="@string/income" />

            <Button
                android:id="@+id/addExpensesView"
                style="@style/homeTextViewsAdd"
                android:text="@string/expenses" />

            <Button
                android:id="@+id/addSavingsView"
                style="@style/homeTextViewsAdd"
                android:text="@string/savings" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>